generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider            = "prisma-dbml-generator"
  projectName         = "Freelance Escrow Platform"
  projectDatabaseType = "PostgreSQL"
  projectNote         = "Schema for managing end to end process of delivering client work for creatives and freelancers."
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model DigitalAsset {
  assetId     String     @id @default(cuid()) @map("assetid")
  milestoneId String?    @map("milestoneid")
  assetUrl    String?    @map("asseturl") @db.VarChar(255)
  expiryDate  DateTime?  @map("expirydate") @db.Timestamp(6)
  milestone   Milestone? @relation(fields: [milestoneId], references: [milestoneId], onDelete: NoAction, onUpdate: NoAction)

  @@map("digitalassets")
}

model Feedback {
  id                   String      @id @default(cuid()) @map("feedbackid")
  description          String
  type                 String
  // Add any other fields you need to capture feedback details
  additionalIterations Boolean?    @map("additionaliterations") @db.Boolean
  createdAt            DateTime    @default(now())
  updatedAt            DateTime    @updatedAt
  // Define relationships
  milestone            Milestone   @relation(fields: [milestoneId], references: [milestoneId], onDelete: NoAction, onUpdate: NoAction)
  milestoneId          String
  Iteration            Iteration[]
}

model Milestone {
  milestoneId   String         @id @default(cuid()) @map("milestoneid")
  projectId     String?        @map("projectid")
  milestoneName String?        @map("milestonename") @db.VarChar(255)
  description   String?        @map("description") @db.Text
  amount        Decimal?       @db.Decimal(10, 2)
  dueDate       DateTime?      @map("duedate") @db.Timestamp(6)
  status        String?        @db.VarChar(50)
  paymentStatus String?        @db.VarChar(50)
  paidAmount    Decimal?       @db.Decimal(10, 2)
  startDate     DateTime // Start date of the milestone
  endDate       DateTime // End date of the milestone
  createdAt     DateTime       @default(now()) // Timestamp when the milestone was created
  updatedAt     DateTime       @updatedAt // Timestamp when the milestone was last updated
  digitalAssets DigitalAsset[]
  project       Project?       @relation(fields: [projectId], references: [projectId], onDelete: NoAction, onUpdate: NoAction)
  feedbacks     Feedback[]
  iterations    Iteration[]
  invoices      Invoice[]

  @@map("milestones")
}

model Iteration {
  id          String    @id @default(cuid())
  // Add fields to track iteration details
  description String // Description of the iteration
  status      String // Status of the iteration (e.g., "Completed", "Pending")
  createdAt   DateTime  @default(now()) // Timestamp when the iteration was created
  updatedAt   DateTime  @updatedAt // Timestamp when the iteration was last updated
  // Define relationships
  feedback    Feedback  @relation(fields: [feedbackId], references: [id])
  feedbackId  String
  milestone   Milestone @relation(fields: [milestoneId], references: [milestoneId])
  milestoneId String
}

model Client {
  id               String @id @default(cuid())
  firstName        String
  lastName         String
  email            String
  phone            String
  stripeCustomerId String
  // ... other client fields ...

  projects Project[] // A client can have multiple projects.
  invoices Invoice[] // A client can have multiple invoices for different projects.
}

model Project {
  projectId       String      @id @default(cuid()) @map("projectid")
  projectName     String      @map("projectname") @db.VarChar(255)
  totalAmount     Decimal?    @map("totalamount") @db.Decimal(10, 2)
  milestones      Milestone[] // A project can have multiple milestones.
  payments        Payment[]
  stripeAccountId String?     @map("stripeaccountid") @db.VarChar(255)
  clientId        String?     @map("clientid") @db.VarChar(255)
  invoices        Invoice[] // Each project can have multiple invoices.
  client          Client?     @relation(fields: [clientId], references: [id])

  @@map("projects")
}

model Invoice {
  id        Int      @id @default(autoincrement())
  // Add fields to store invoice details, such as total amount and payment status
  invoiceNo String // Unique invoice number
  amount    Float // Total amount for the invoice
  status    String // Status of the invoice (e.g., "Paid", "Unpaid")
  createdAt DateTime @default(now()) // Timestamp when the invoice was created
  updatedAt DateTime @updatedAt // Timestamp when the invoice was last updated

  // Define relationships, e.g., belongsTo Project or Milestone
  belongsTo   Project?   @relation(fields: [projectId], references: [projectId])
  projectId   String? // Invoice is related to a project.
  linksTo     Milestone? @relation(fields: [milestoneId], references: [milestoneId])
  milestoneId String? // Invoice is related to a milestone.
  client      Client?    @relation(fields: [clientId], references: [id])
  clientId    String?
}

model Payment {
  id        Int     @id @default(autoincrement())
  amount    Float
  date      String
  status    String
  projectId String
  project   Project @relation(fields: [projectId], references: [projectId], onDelete: NoAction, onUpdate: NoAction)
}

enum Role {
  AGENCY_OWNER
  AGENCY_ADMIN
  SUBACCOUNT_USER
  SUBACCOUNT_GUEST
}

enum Icon {
  settings
  chart
  calendar
  check
  chip
  compass
  database
  flag
  home
  info
  link
  lock
  messages
  notification
  payment
  power
  receipt
  shield
  star
  tune
  videorecorder
  wallet
  warning
  headphone
  send
  pipelines
  person
  category
  contact
  clipboardIcon
}

model User {
  id           String         @id @default(cuid())
  name         String
  avatarUrl    String         @db.Text
  email        String         @unique
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
  role         Role           @default(SUBACCOUNT_USER)
  agencyId     String?
  Agency       Agency?        @relation(fields: [agencyId], references: [id], onDelete: Cascade)
  Permissions  Permissions[]
  Ticket       Ticket[]
  Notification Notification[]

  @@index([agencyId])
}

model Permissions {
  id           String     @id @default(cuid())
  email        String
  User         User       @relation(fields: [email], references: [email], onDelete: Cascade)
  subAccountId String
  SubAccount   SubAccount @relation(fields: [subAccountId], references: [id], onDelete: Cascade)
  access       Boolean

  @@index([subAccountId])
  @@index([email])
}

model Agency {
  id               String                @id @default(cuid())
  connectAccountId String?               @default("")
  customerId       String                @default("")
  name             String
  agencyLogo       String                @db.Text
  companyEmail     String                @db.Text
  companyPhone     String
  whiteLabel       Boolean               @default(true)
  address          String
  city             String
  zipCode          String
  state            String
  country          String
  goal             Int                   @default(5)
  users            User[]
  createdAt        DateTime              @default(now())
  updatedAt        DateTime              @updatedAt
  SubAccount       SubAccount[]
  SidebarOption    AgencySidebarOption[]
  Invitation       Invitation[]
  Notification     Notification[]
  Subscription     Subscription?
  AddOns           AddOns[]
}

model SubAccount {
  id               String                    @id @default(cuid())
  connectAccountId String?                   @default("")
  name             String
  subAccountLogo   String                    @db.Text
  createdAt        DateTime                  @default(now())
  updatedAt        DateTime                  @updatedAt
  companyEmail     String                    @db.Text
  companyPhone     String
  goal             Int                       @default(5)
  address          String
  city             String
  zipCode          String
  state            String
  country          String
  agencyId         String
  Agency           Agency                    @relation(fields: [agencyId], references: [id], onDelete: Cascade)
  SidebarOption    SubAccountSidebarOption[]
  Permissions      Permissions[]
  Funnels          Funnel[]
  Media            Media[]
  Contact          Contact[]
  Trigger          Trigger[]
  Automation       Automation[]
  Pipeline         Pipeline[]
  Tags             Tag[]
  Notification     Notification[]

  @@index([agencyId])
}

model Tag {
  id           String   @id @default(cuid())
  name         String
  color        String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  subAccountId String

  SubAccount SubAccount @relation(fields: [subAccountId], references: [id], onDelete: Cascade)
  Ticket     Ticket[]

  @@index([subAccountId])
}

model Pipeline {
  id           String     @id @default(cuid())
  name         String
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  Lane         Lane[]
  SubAccount   SubAccount @relation(fields: [subAccountId], references: [id], onDelete: Cascade)
  subAccountId String

  @@index([subAccountId])
}

model Lane {
  id         String   @id @default(cuid())
  name       String
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  Pipeline   Pipeline @relation(fields: [pipelineId], references: [id], onDelete: Cascade)
  pipelineId String
  Tickets    Ticket[]
  order      Int      @default(0)

  @@index([pipelineId])
}

model Ticket {
  id          String   @id @default(cuid())
  name        String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  laneId      String
  order       Int      @default(0)
  Lane        Lane     @relation(fields: [laneId], references: [id], onDelete: Cascade)
  value       Decimal?
  description String?
  Tags        Tag[]

  customerId String?
  Customer   Contact? @relation(fields: [customerId], references: [id], onDelete: SetNull)

  assignedUserId String?
  Assigned       User?   @relation(fields: [assignedUserId], references: [id], onDelete: SetNull)

  @@index([laneId])
  @@index([customerId])
  @@index([assignedUserId])
}

enum TriggerTypes {
  CONTACT_FORM
}

model Trigger {
  id           String       @id @default(cuid())
  name         String
  type         TriggerTypes
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt
  subAccountId String
  Subaccount   SubAccount   @relation(fields: [subAccountId], references: [id], onDelete: Cascade)
  Automations  Automation[]

  @@index([subAccountId])
}

model Automation {
  id                 String               @id @default(cuid())
  name               String
  createdAt          DateTime             @default(now())
  updatedAt          DateTime             @updatedAt
  triggerId          String?
  published          Boolean              @default(false)
  Trigger            Trigger?             @relation(fields: [triggerId], references: [id], onDelete: Cascade)
  subAccountId       String
  Subaccount         SubAccount           @relation(fields: [subAccountId], references: [id], onDelete: Cascade)
  Action             Action[]
  AutomationInstance AutomationInstance[]

  @@index([triggerId])
  @@index([subAccountId])
}

model AutomationInstance {
  id           String     @id @default(cuid())
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  automationId String
  Automation   Automation @relation(fields: [automationId], references: [id], onDelete: Cascade)
  active       Boolean    @default(false)

  @@index([automationId])
}

enum ActionType {
  CREATE_CONTACT
}

model Action {
  id           String     @id @default(cuid())
  name         String
  type         ActionType
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  automationId String
  order        Int
  Automation   Automation @relation(fields: [automationId], references: [id], onDelete: Cascade)
  laneId       String     @default("0")

  @@index([automationId])
}

model Contact {
  id           String   @id @default(cuid())
  name         String
  email        String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  subAccountId String

  Subaccount SubAccount @relation(fields: [subAccountId], references: [id], onDelete: Cascade)
  Ticket     Ticket[]

  @@index([subAccountId])
}

model Media {
  id           String     @id @default(cuid())
  type         String?
  name         String
  link         String     @unique
  subAccountId String
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  Subaccount   SubAccount @relation(fields: [subAccountId], references: [id], onDelete: Cascade)

  @@index([subAccountId])
}

model Funnel {
  id            String       @id @default(cuid())
  name          String
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt
  description   String?
  published     Boolean      @default(false)
  subDomainName String?      @unique
  favicon       String?      @db.Text
  subAccountId  String
  SubAccount    SubAccount   @relation(fields: [subAccountId], references: [id], onDelete: Cascade)
  FunnelPages   FunnelPage[]
  liveProducts  String?      @default("[]")
  ClassName     ClassName[]

  @@index([subAccountId])
}

model ClassName {
  id         String   @id @default(cuid())
  name       String
  color      String
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  funnelId   String
  customData String?
  Funnel     Funnel   @relation(fields: [funnelId], references: [id], onDelete: Cascade)

  @@index([funnelId])
}

model FunnelPage {
  id           String   @id @default(cuid())
  name         String
  pathName     String   @default("")
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  visits       Int      @default(0)
  content      String?
  order        Int
  previewImage String?  @db.Text
  funnelId     String
  Funnel       Funnel   @relation(fields: [funnelId], references: [id], onDelete: Cascade)

  @@index([funnelId])
}

model AgencySidebarOption {
  id        String   @id @default(cuid())
  name      String   @default("Menu")
  link      String   @default("#")
  icon      Icon     @default(info)
  agencyId  String
  Agency    Agency?  @relation(fields: [agencyId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([agencyId])
}

model SubAccountSidebarOption {
  id           String      @id @default(cuid())
  name         String      @default("Menu")
  link         String      @default("#")
  icon         Icon        @default(info)
  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt
  SubAccount   SubAccount? @relation(fields: [subAccountId], references: [id], onDelete: Cascade)
  subAccountId String?

  @@index([subAccountId])
}

enum InvitationStatus {
  ACCEPTED
  REVOKED
  PENDING
}

model Invitation {
  id       String           @id @default(cuid())
  email    String           @unique
  agencyId String
  Agency   Agency           @relation(fields: [agencyId], references: [id], onDelete: Cascade)
  status   InvitationStatus @default(PENDING)
  role     Role             @default(SUBACCOUNT_USER)

  @@index([agencyId])
}

model Notification {
  id           String  @id @default(cuid())
  notification String
  agencyId     String
  subAccountId String?
  userId       String

  User       User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  Agency     Agency      @relation(fields: [agencyId], references: [id], onDelete: Cascade)
  SubAccount SubAccount? @relation(fields: [subAccountId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([agencyId])
  @@index([subAccountId])
  @@index([userId])
}

enum Plan {
  price_1OYxkqFj9oKEERu1NbKUxXxN
  price_1OYxkqFj9oKEERu1KfJGWxgN
}

model Subscription {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  plan      Plan?
  price     String?
  active    Boolean  @default(false)

  priceId              String
  customerId           String
  currentPeriodEndDate DateTime
  subscritiptionId     String   @unique

  agencyId String? @unique
  Agency   Agency? @relation(fields: [agencyId], references: [id])

  @@index([customerId])
}

model AddOns {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  name      String
  active    Boolean  @default(false)
  priceId   String   @unique
  agencyId  String?
  Agency    Agency?  @relation(fields: [agencyId], references: [id])

  @@index([agencyId])
}

// Might need to put this into a separate service

model Service {
  id              Int               @id @default(autoincrement())
  name            String            @unique
  description     String?
  components      Component[]
  healthCheckData HealthCheckData[]

  @@map("Services")
}

model Component {
  id              Int               @id @default(autoincrement())
  serviceId       Int
  name            String
  description     String?
  service         Service           @relation(fields: [serviceId], references: [id])
  healthCheckData HealthCheckData[]

  @@map("Components")
}

model HealthCheckData {
  id              Int       @id @default(autoincrement())
  serviceId       Int
  componentId     Int
  measurementName String?
  status          String
  observedValue   Float?
  observedUnit    String?
  output          String?
  createdAt       DateTime  @default(now())
  service         Service   @relation(fields: [serviceId], references: [id])
  component       Component @relation(fields: [componentId], references: [id])

  @@map("HealthCheckData")
}
